--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ version: "3.7"
 services:
   fastapi-app:
     build:
-      context: ./fastapi-app      # Dockerfile이 위치한 디렉토리 경로
-      dockerfile: Dockerfile      # Dockerfile 이름 (생략 가능, 기본값은 'Dockerfile')
+      context: .                  # 프로젝트 루트에서 빌드
+      dockerfile: Dockerfile      # 루트에 위치한 Dockerfile 사용
     container_name: FastApi-app
     ports:
       - "5001:5001"
