--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,22 @@ services:
     container_name: node-exporter
     ports:
       - "7100:9100"
+    command:
+      - '--path.rootfs=/host'
+    volumes:
+      - /:/host:ro
+
+  cadvisor:
+    image: gcr.io/cadvisor/cadvisor:latest
+    container_name: cadvisor
+    ports:
+      - "8080:8080"
+    volumes:
+      - /:/rootfs:ro
+      - /var/run:/var/run:rw
+      - /sys:/sys:ro
+      - /var/lib/docker/:/var/lib/docker:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
 
 volumes:
   sonarqube_conf:
