--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: .                  # 프로젝트 루트에서 빌드
       dockerfile: Dockerfile      # 루트에 위치한 Dockerfile 사용
-    container_name: FastApi-app
+    container_name: fastapi-app
     ports:
       - "5001:5001"
 
@@ -62,7 +62,6 @@ services:
       - /var/run:/var/run:rw
       - /sys:/sys:ro
       - /var/lib/docker/:/var/lib/docker:ro
-      - /var/run/docker.sock:/var/run/docker.sock:ro
 
 volumes:
   sonarqube_conf:
