feat: Loki, Promtail 추가 및 모니터링 스택 완성
- Loki 로그 수집 시스템 추가 (포트: 3100)
- Promtail 로그 수집 에이전트 추가
- docker-compose.yml 개선 (version 제거, Promtail 설정)
- promtail-config.yml 생성
- prometheus.yml 설정 업데이트
- PORTS.md 문서 추가 (모든 서비스 포트 정보)

--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,11 +1,12 @@
 global:
   scrape_interval: 15s
+  evaluation_interval: 15s
 
 scrape_configs:
   # FastApi 애플리케이션의 메트릭 수집
   - job_name: 'fastapi'
     static_configs:
-      - targets: ['fastapi-app:5001']  # Docker for Mac/Windows인 경우; 리눅스에서는 'localhost:5000' 또는 컨테이너 네트워크 이름 사용
+      - targets: ['fastapi-app:5001']
 
   # 시스템 메트릭 수집 (node-exporter)
   - job_name: 'node'
@@ -16,3 +17,8 @@ scrape_configs:
   - job_name: 'cadvisor'
     static_configs:
       - targets: ['cadvisor:8080']
+
+  # Prometheus 자체 메트릭
+  - job_name: 'prometheus'
+    static_configs:
+      - targets: ['localhost:9090']
