--- a/monitoring/promtail-config.yml
+++ b/monitoring/promtail-config.yml
@@ -9,7 +9,7 @@ clients:
   - url: http://loki:3100/loki/api/v1/push
 
 scrape_configs:
-  - job_name: system
+  - job_name: varlogs
     static_configs:
       - targets:
           - localhost
@@ -17,11 +17,10 @@ scrape_configs:
           job: varlogs
           __path__: /var/log/*log
 
-  - job_name: containers
+  - job_name: containerlogs
     static_configs:
       - targets:
           - localhost
         labels:
           job: containerlogs
           __path__: /var/lib/docker/containers/*/*-json.log
-
