--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,8 @@ services:
       - "7070:9090"
     command:
       - "--config.file=/etc/prometheus/prometheus.yml"
+    networks:
+      - monitoring
 
   grafana:
     image: grafana/grafana:latest
@@ -44,6 +46,8 @@ services:
     depends_on:
       - prometheus
       - loki
+    networks:
+      - monitoring
 
   loki:
     image: grafana/loki:latest
@@ -53,6 +57,8 @@ services:
     command: -config.file=/etc/loki/local-config.yaml
     volumes:
       - loki-data:/loki
+    networks:
+      - monitoring
 
   promtail:
     image: grafana/promtail:latest
@@ -64,12 +70,16 @@ services:
     command: -config.file=/etc/promtail/config.yml
     depends_on:
       - loki
+    networks:
+      - monitoring
 
   node-exporter:
     image: prom/node-exporter:latest
     container_name: node-exporter
     ports:
       - "7100:9100"
+    networks:
+      - monitoring
 
   cadvisor:
     image: gcr.io/cadvisor/cadvisor:latest
@@ -81,6 +91,8 @@ services:
       - /var/run:/var/run:rw
       - /sys:/sys:ro
       - /var/lib/docker/:/var/lib/docker:ro
+    networks:
+      - monitoring
 
 volumes:
   sonarqube_conf:
@@ -89,3 +101,7 @@ volumes:
   sonarqube_extensions:
   grafana-data:
   loki-data:
+
+networks:
+  monitoring:
+    driver: bridge
