feat: Promtail을 선택적으로 사용할 수 있도록 설정
- Promtail을 profiles로 설정하여 필요할 때만 실행 가능
- Promtail 없이도 로그 수집 가능하도록 가이드 추가
- fastapi-app에 로깅 설정 추가
- LOGGING_GUIDE.md 추가: Promtail 없이 로그 수집하는 방법 안내

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,13 @@ services:
       - "5001:5001"
     labels:
       app: fastapi-app
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+    networks:
+      - monitoring
 
   prometheus:
     image: prom/prometheus:latest
@@ -50,6 +57,8 @@ services:
     networks:
       - monitoring
 
+  # Promtail은 선택 사항입니다. 필요 없으면 주석 처리하세요.
+  # Docker 로그는 Promtail 없이도 수집 가능합니다.
   promtail:
     image: grafana/promtail:latest
     container_name: promtail
@@ -62,6 +71,8 @@ services:
       - loki
     networks:
       - monitoring
+    profiles:
+      - with-promtail  # 선택적 사용: docker compose --profile with-promtail up
 
   node-exporter:
     image: prom/node-exporter:latest
